# hearth

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
hearth/: __init__.py  backends.py  cli.py  ollama.py
hearth/redact/: __init__.py  core.py  detectors.py  llm.py
hearth/search/: __init__.py  index.py  query.py  store.py
tests/: test_backends.py  test_redact.py  test_search.py
